{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 16,
  "lineage": "c23adb97-d73c-0b56-5167-ebb62e6f8698",
  "resources": [
    {
      "module": "module.web_app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264239309:vpc/vpc-0843de28cfa9bd0e1",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07870222c92c45405",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01ab4b7c7071293c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0843de28cfa9bd0e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08df023e8c791014f",
            "owner_id": "058264239309",
            "tags": {
              "Name": "cacetinho-empresa-us-east-1-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264239309:loadbalancer/app/cacetinho-sa-frontend-alb/5b6fecebe5745c52",
            "arn_suffix": "app/cacetinho-sa-frontend-alb/5b6fecebe5745c52",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cacetinho-sa-frontend-alb-296944683.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264239309:loadbalancer/app/cacetinho-sa-frontend-alb/5b6fecebe5745c52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cacetinho-sa-frontend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-008c184d5d2565c5c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ecf9dca30d6dba6"
              },
              {
                "subnet_id": "subnet-06f3d1356c79f94ea"
              },
              {
                "subnet_id": "subnet-0959383923cf876da"
              }
            ],
            "subnets": [
              "subnet-01ecf9dca30d6dba6",
              "subnet-06f3d1356c79f94ea",
              "subnet-0959383923cf876da"
            ],
            "vpc_id": "vpc-0843de28cfa9bd0e1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.web_app.aws_security_group.alb",
            "module.web_app.data.aws_subnets.public",
            "module.web_app.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264239309:listener/app/cacetinho-sa-frontend-alb/5b6fecebe5745c52/892bc6e461b30f6e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264239309:targetgroup/cacetinho-sa-frontend-tg/77abcc8733368f03",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264239309:listener/app/cacetinho-sa-frontend-alb/5b6fecebe5745c52/892bc6e461b30f6e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264239309:loadbalancer/app/cacetinho-sa-frontend-alb/5b6fecebe5745c52",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_lb.this",
            "module.web_app.aws_lb_target_group.this",
            "module.web_app.aws_security_group.alb",
            "module.web_app.data.aws_subnets.public",
            "module.web_app.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264239309:targetgroup/cacetinho-sa-frontend-tg/77abcc8733368f03",
            "arn_suffix": "targetgroup/cacetinho-sa-frontend-tg/77abcc8733368f03",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264239309:targetgroup/cacetinho-sa-frontend-tg/77abcc8733368f03",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cacetinho-sa-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0843de28cfa9bd0e1"
          },
          "dependencies": [
            "module.web_app.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264239309:security-group/sg-008c184d5d2565c5c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-008c184d5d2565c5c",
            "ingress": [],
            "name": "cacetinho-sa-frontend-alb",
            "name_prefix": "",
            "owner_id": "058264239309",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0843de28cfa9bd0e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264239309:security-group/sg-061f5601ea8d9d559",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-061f5601ea8d9d559",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008c184d5d2565c5c"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071b60677aa8bcfeb"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cacetinho-sa-frontend-instance",
            "name_prefix": "",
            "owner_id": "058264239309",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0843de28cfa9bd0e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-4203174961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-061f5601ea8d9d559",
            "security_group_rule_id": "sgr-010bb67b0c7258193",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_security_group.instance",
            "module.web_app.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_connect_to_instance",
      "provider": "module.web_app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3675117369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-061f5601ea8d9d559",
            "security_group_rule_id": "sgr-055066bd232973b69",
            "self": false,
            "source_security_group_id": "sg-008c184d5d2565c5c",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_security_group.alb",
            "module.web_app.aws_security_group.instance",
            "module.web_app.data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}